Mobile view spacing issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -275,4 +275,8 @@ body {
     border-bottom: 1px solid #ccc;
   }
 
+  #projects .grid-60 {
+    padding-top:12px;
+  }
+
 }
